# deep_project_group_38

./: .gitignore  ExperimentSetup.ipynb  Explainer_Notebook.ipynb  README.md  cc_samplers.ipynb  dir_vae.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  sampler_cc.ipynb  tasks.py
configs/: base_config.yaml  sweep_config.yaml  wandb_sweep_config.yaml
notebooks/: Dir (1).ipynb  DirVAE_nyReparam.ipynb  Dirichlet_implementations.ipynb  ExperimentSetup.ipynb  WorkingExperiment.ipynb  cc_implementations.ipynb  cc_samplers.ipynb  dir_vae.ipynb  plotting.py
src/deep_proj/: data.py  evaluate.py  evaluate_multiple.py  model.py  simplex.py  train.py  visualize.py
tests/: test_data.py
