[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_proj"
version = "0.0.1"
description = "This is a project repo for the project in course 02456 Deep Learning at DTU."
authors = [
  { name = "Group 38", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
